--- a/survey.html
+++ b/survey.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>アンケート</title>
+  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/survey.css">
+  <script src="./js/script.js"></script>
 </head>
 <body>
   <header class="header"></header>
@@ -25,10 +28,12 @@
         </div>
         <div class="survey_hobby">
           <label for="hobby">趣味：</label>
-          <input type="checkbox" name="hobby" id="" value="">カフェ巡り
-          <input type="checkbox" name="hobby" id="">映画
-          <input type="checkbox" name="hobby" id="">料理
-          <input type="checkbox" name="hobby" id="">運動
+          <ul class="ks-cboxtags">
+            <li><input type="checkbox" id="cafe" value="カフェ巡り"><label for="cafe">カフェ巡り</label></li>
+            <li><input type="checkbox" id="movie" value="映画"><label for="movie">映画</label></li>
+            <li><input type="checkbox" id="food" value="料理"><label for="food">料理</label></li>
+            <li><input type="checkbox" id="exercise" value="運動"><label for="exercise">運動</label></li>
+        </ul>
         </div>
         <div class="survey_timing">
           <label for="timing">朝派？夜派？：</label>
@@ -42,11 +47,13 @@
         </div>
         <div class="survey_sports">
           <label for="sports">趣味：</label>
-          <input type="checkbox" name="sports" id="" value="">野球
-          <input type="checkbox" name="sports" id="" value="">サッカー
-          <input type="checkbox" name="sports" id="" value="">テニス
-          <input type="checkbox" name="sports" id="" value="">スノボ
-          <input type="checkbox" name="sports" id="" value="">バスケ
+          <ul class="ks-cboxtags">
+            <li><input type="checkbox" id="baseball" value="野球"><label for="baseball">野球</label></li>
+            <li><input type="checkbox" id="soccer" value="サッカー"><label for="soccer">サッカー</label></li>
+            <li><input type="checkbox" id="tennis" value="テニス"><label for="tennis">料理</label></li>
+            <li><input type="checkbox" id="snowboard" value="スノボ"><label for="exercise">スノボ</label></li>
+            <li><input type="checkbox" id="basketball" value="スノボ"><label for="basketball">バスケ</label></li>
+        </ul>
         </div>
       </form>
     </section>
