--- a/survey.html
+++ b/survey.html
@@ -55,6 +55,7 @@
             <li><input type="checkbox" id="basketball" value="スノボ"><label for="basketball">バスケ</label></li>
         </ul>
         </div>
+        <input type="submit" value="回答">
       </form>
     </section>
   </main>
