--- a/club.html
+++ b/club.html
@@ -13,51 +13,41 @@
 
 <body>
 <!--ヘッダ-->
-<header>
+<!-- <header class="p-header">
 
-</header>
+</header> -->
 <!--ヘッダーここまで-->
 
-<main>
-<!--ヒーローみたいな-->
-<section>
-    <div class="hero">
-        <h1 class="hero_title">
-            <span class="hero_label">部活紹介</span>
-            <span class="hero_inline">POSSE間の交流の場</span>
-        </h1>
-    </div>
-</section>
-<!--ヒーロー終わり-->
+<main class="main">
 
-<!--紹介文-->
-<h2>POSSEでは、<br>
-    プログラミングの他にも同じ趣味、目標を持った仲間が集う部活動が活発に行われています！<br>
-    部活に入ってposse内で友達を増やそう！
-</h2>
-<!--紹介文終わり-->
+<!--部活一覧-->
+<p class="itiran">部活一覧</p>
+<!--部活一覧終わり-->
+
 
 <!--バスケ-->
-<section class="club_basket">
-<div class="club_name">バスケ部</div>
-<table class="pro">
-    <tr>
-        <th>部長</th>
-        <td>本松達祐</td>
-    </tr>
-    <tr>
-        <th>活動頻度</th>
-        <td>不定期(週一回)</td>
-    </tr>
-    <tr>
-        <th>活動内容</th>
-        <td>バスケ経験者、運動好き、初心者歓迎！</td>
-    </tr>
-    <tr>
-        <th>部員</th>
-        <td>本松達祐 <br>三木咲乃 <br>工藤日向 <br> 江口遥</td>
-    </tr>
-</table>
+<section>
+<div class="club_basket">
+    <div class="club_img">
+        <img src="" alt="画像">
+    </div>
+    <div class="pro">
+        <div class="club_1">
+            <div class="name">
+                <p>バスケ部</p>
+            </div>
+            <div class="de">
+                <p>活動：週一回 <br>代表：本松達祐</p>
+            </div>
+        </div>
+        <div class="club_2">
+        <p>経験者初心者問わず誰でも歓迎！</p>
+        </div>
+        <div class="club_button">
+            <p>体験入部してみる！</p>
+        </div>
+    </div>
+</div>
 </section>
 <!--バスケ終わり-->
 
