何もしてないンゴ

--- a/survey.html
+++ b/survey.html
@@ -19,12 +19,12 @@
       <form action="" name="survey">
         <div class="survey_name">
           <label for="name">名前：</label>
-          <input type="text" name="name" id="">
+          <input type="text" name="name" id="name">
         </div>
         <div class="survey_grade">
           <label for="grade">期生：</label>
-          <input type="radio" name="grade" id="" value="3.0">3.0
-          <input type="radio" name="grade" id="" value="3.5">3.5
+          <input type="radio" name="grade" id="g-3.0" value="3.0">3.0
+          <input type="radio" name="grade" id="g-3.5" value="3.5">3.5
         </div>
         <div class="survey_hobby">
           <label for="hobby">趣味：</label>
@@ -37,13 +37,13 @@
         </div>
         <div class="survey_timing">
           <label for="timing">朝派？夜派？：</label>
-          <input type="radio" name="timing" id="" value="朝">朝型
-          <input type="radio" name="timing" id="" value="夜">夜型
+          <input type="radio" name="timing" id="morning" value="朝">朝型
+          <input type="radio" name="timing" id="night" value="夜">夜型
         </div>
         <div class="survey_personality">
           <label for="timing">内向型?外向型？</label>
-          <input type="radio" name="personality" id="" value="内向型">内向型
-          <input type="radio" name="personality" id="" value="外向型">外向型
+          <input type="radio" name="personality" id="in" value="内向型">内向型
+          <input type="radio" name="personality" id="out" value="外向型">外向型
         </div>
         <div class="survey_sports">
           <label for="sports">趣味：</label>
