--- a/survey.html
+++ b/survey.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/survey.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="./js/script.js" defer></script>
+  <script src="js/survey.js" defer></script>
 </head>
 
 <body>
@@ -55,7 +55,7 @@
             <li><input type="checkbox" id="soccer" value="サッカー"><label for="soccer">サッカー</label></li>
             <li><input type="checkbox" id="tennis" value="テニス"><label for="tennis">料理</label></li>
             <li><input type="checkbox" id="snowboard" value="スノボ"><label for="exercise">スノボ</label></li>
-            <li><input type="checkbox" id="basketball" value="スノボ"><label for="basketball">バスケ</label></li>
+            <li><input type="checkbox" id="basketball" value="バスケ"><label for="basketball">バスケ</label></li>
           </ul>
         </div>
         <input type="submit" id="submit" value="回答">
