ろもろ変更

--- a/toppage.html
+++ b/toppage.html
@@ -19,9 +19,9 @@
 
     <section class="links">
       <div class="bottons">
-      <a href="#" class="btn_01"><span>診断ページ</span></a>
-      <a href="#" class="btn_01"><span>部活一覧</span></a>
-      <a href="#" class="btn_01"><span>POSSEアプリ</span></a>
+      <a href="./survey.html" class="btn_01"><span>診断ページ</span></a>
+      <a href="./club.html" class="btn_01"><span>部活一覧</span></a>
+      <a href="https://event.posse-ap.com/login" class="btn_01"><span>POSSEアプリ</span></a>
     </div>
     </section>
 
