--- a/survey.html
+++ b/survey.html
@@ -54,10 +54,10 @@
               <div class="survey_item">
                 <label for="hobby">A.</label>
                 <ul class="ks-cboxtags">
-                  <li><input type="checkbox" id="cafe" value="カフェ巡り"><label for="cafe">カフェ巡り</label></li>
-                  <li><input type="checkbox" id="movie" value="映画"><label for="movie">映画</label></li>
-                  <li><input type="checkbox" id="food" value="料理"><label for="food">料理</label></li>
-                  <li><input type="checkbox" id="exercise" value="運動"><label for="exercise">運動</label></li>
+                  <li><input type="checkbox" id="cafe" value="カフェ巡り" name="chk1"><label for="cafe">カフェ巡り</label></li>
+                  <li><input type="checkbox" id="movie" value="映画" name="chk1"><label for="movie">映画</label></li>
+                  <li><input type="checkbox" id="food" value="料理" name="chk1"><label for="food">料理</label></li>
+                  <li><input type="checkbox" id="exercise" value="運動" name="chk1"><label for="exercise">運動</label></li>
                 </ul>
               </div>
             </div>
@@ -82,11 +82,11 @@
               <div class="survey_item">
                 <label for="sports">A.</label>
                 <ul class="ks-cboxtags">
-                  <li><input type="checkbox" id="baseball" value="野球"><label for="baseball">野球</label></li>
-                  <li><input type="checkbox" id="soccer" value="サッカー"><label for="soccer">サッカー</label></li>
-                  <li><input type="checkbox" id="tennis" value="テニス"><label for="tennis">料理</label></li>
-                  <li><input type="checkbox" id="snowboard" value="スノボ"><label for="exercise">スノボ</label></li>
-                  <li><input type="checkbox" id="basketball" value="スノボ"><label for="basketball">バスケ</label></li>
+                  <li><input type="checkbox" id="baseball" value="野球" name="chk2"><label for="baseball">野球</label></li>
+                  <li><input type="checkbox" id="soccer" value="サッカー" name="chk2"><label for="soccer">サッカー</label></li>
+                  <li><input type="checkbox" id="tennis" value="テニス" name="chk2"><label for="tennis">料理</label></li>
+                  <li><input type="checkbox" id="snowboard" value="スノボ" name="chk2"><label for="exercise">スノボ</label></li>
+                  <li><input type="checkbox" id="basketball" value="スノボ" name="chk2"><label for="basketball">バスケ</label></li>
                 </ul>
               </div>
             </div>
