--- a/toppage.html
+++ b/toppage.html
@@ -14,7 +14,10 @@
 </head>
 
 <body>
-  <header></header>
+  <header>
+    <img src="/img/logo.svg">
+    
+  </header>
   <main>
 
     <section class="links">
