--- a/club.html
+++ b/club.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,129 +14,129 @@
 </head>
 
 <body>
-<!--ヘッダ-->
-<!-- <header class="p-header">
+    <!--ヘッダ-->
+    <!-- <header class="p-header">
 
 </header> -->
-<!--ヘッダーここまで-->
+    <!--ヘッダーここまで-->
 
-<main class="main">
+    <main class="main">
 
-<!--部活一覧-->
-<div class="club_itiran">
-    <p class="itiran">部活一覧</p>
-</div>
-<!--部活一覧終わり-->
-
-
-<!--バスケ-->
-<section>
-<div class="club_basket">
-    <div class="club_img">
-        <img src="" alt="画像">
-    </div>
-    <div class="pro">
-        <div class="club_1">
-            <div class="name">
-                <p>バスケ部</p>
-            </div>
-            <div class="de">
-                <p>活動：週一回 <br>代表：本松達祐</p>
-            </div>
+        <!--部活一覧-->
+        <div class="club_itiran">
+            <p class="itiran">部活一覧</p>
         </div>
-        <div class="club_2">
-            <p>経験者初心者問わず誰でも歓迎！</p>
-        </div>
-        <div class="club_button">
-            <p>体験入部してみる！</p>
-        </div>
-    </div>
-</div>
-</section>
-<!--バスケ終わり-->
+        <!--部活一覧終わり-->
 
-<!--自炊-->
-<section>
-    <div class="club_basket">
-        <div class="club_img">
-            <img src="" alt="画像">
-        </div>
-        <div class="pro">
-            <div class="club_1">
-                <div class="name">
-                    <p>自炊部</p>
+
+        <!--バスケ-->
+        <section>
+            <div class="club_basket">
+                <div class="club_img">
+                    <img src="" alt="画像">
                 </div>
-                <div class="de">
-                    <p>活動：週二回 <br>代表：江口遥</p>
+                <div class="pro">
+                    <div class="club_1">
+                        <div class="name">
+                            <p>バスケ部</p>
+                        </div>
+                        <div class="de">
+                            <p>活動：週一回 <br>代表：本松達祐</p>
+                        </div>
+                    </div>
+                    <div class="club_2">
+                        <p>経験者初心者問わず誰でも歓迎！</p>
+                    </div>
+                    <div class="club_button">
+                        <p>体験入部してみる！</p>
+                    </div>
                 </div>
             </div>
-            <div class="club_2">
-                <p>普段外食ばかりの人いませんか？ぜひ参加してね</p>
-            </div>
-            <div class="club_button">
-                <p>体験入部してみる！</p>
-            </div>
-        </div>
-    </div>
-</section>
-<!--自炊終わり-->
+        </section>
+        <!--バスケ終わり-->
 
-<!--朝活-->
-<section>
-    <div class="club_basket">
-        <div class="club_img">
-            <img src="" alt="画像">
-        </div>
-        <div class="pro">
-            <div class="club_1">
-                <div class="name">
-                    <p>朝活部</p>
+        <!--自炊-->
+        <section>
+            <div class="club_basket">
+                <div class="club_img">
+                    <img src="" alt="画像">
                 </div>
-                <div class="de">
-                    <p>活動：週三回 <br>代表：工藤日向</p>
-                </div>
-            </div>
-            <div class="club_2">
-                <p>生活習慣乱れている人集え！</p>
-            </div>
-            <div class="club_button">
-                <p>体験入部してみる！</p>
-            </div>
-        </div>
-    </div>
-</section>
-<!--朝活終わり-->
-
-<!--ラーメン-->
-<section>
-    <div class="club_basket">
-        <div class="club_img">
-            <img src="" alt="画像">
-        </div>
-        <div class="pro">
-            <div class="club_1">
-                <div class="name">
-                    <p>ラーメン部</p>
-                </div>
-                <div class="de">
-                    <p>活動：不定期 <br>代表：三木咲乃</p>
+                <div class="pro">
+                    <div class="club_1">
+                        <div class="name">
+                            <p>自炊部</p>
+                        </div>
+                        <div class="de">
+                            <p>活動：週二回 <br>代表：江口遥</p>
+                        </div>
+                    </div>
+                    <div class="club_2">
+                        <p>普段外食ばかりの人いませんか？ぜひ参加してね</p>
+                    </div>
+                    <div class="club_button">
+                        <p>体験入部してみる！</p>
+                    </div>
                 </div>
             </div>
-            <div class="club_2">
-                <p>ラーメン屋を開拓しよう！</p>
-            </div>
-            <div class="club_button">
-                <p>体験入部してみる！</p>
-            </div>
-        </div>
-    </div>
-</section>
-<!--ラーメン終わり-->
-</main>
+        </section>
+        <!--自炊終わり-->
 
-<!--フッター-->
+        <!--朝活-->
+        <section>
+            <div class="club_basket">
+                <div class="club_img">
+                    <img src="" alt="画像">
+                </div>
+                <div class="pro">
+                    <div class="club_1">
+                        <div class="name">
+                            <p>朝活部</p>
+                        </div>
+                        <div class="de">
+                            <p>活動：週三回 <br>代表：工藤日向</p>
+                        </div>
+                    </div>
+                    <div class="club_2">
+                        <p>生活習慣乱れている人集え！</p>
+                    </div>
+                    <div class="club_button">
+                        <p>体験入部してみる！</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--朝活終わり-->
 
-<!--フッター終わり-->
+        <!--映画-->
+        <section>
+            <div class="club_basket">
+                <div class="club_img">
+                    <img src="" alt="画像">
+                </div>
+                <div class="pro">
+                    <div class="club_1">
+                        <div class="name">
+                            <p>映画部</p>
+                        </div>
+                        <div class="de">
+                            <p>活動：不定期 <br>代表：三木咲乃</p>
+                        </div>
+                    </div>
+                    <div class="club_2">
+                        <p>映画観賞会します！</p>
+                    </div>
+                    <div class="club_button">
+                        <p>体験入部してみる！</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--映画終わり-->
+    </main>
+
+    <!--フッター-->
+
+    <!--フッター終わり-->
 
 </body>
 
