--- a/survey.html
+++ b/survey.html
@@ -84,7 +84,7 @@
                 <ul class="ks-cboxtags">
                   <li><input type="checkbox" id="baseball" value="野球"><label for="baseball">野球</label></li>
                   <li><input type="checkbox" id="soccer" value="サッカー"><label for="soccer">サッカー</label></li>
-                  <li><input type="checkbox" id="tennis" value="テニス"><label for="tennis">料理</label></li>
+                  <li><input type="checkbox" id="tennis" value="テニス"><label for="tennis">テニス</label></li>
                   <li><input type="checkbox" id="snowboard" value="スノボ"><label for="exercise">スノボ</label></li>
                   <li><input type="checkbox" id="basketball" value="スノボ"><label for="basketball">バスケ</label></li>
                 </ul>
