ステータスページ動きおけ

--- a/survey.html
+++ b/survey.html
@@ -32,7 +32,7 @@
         <div class="survey_header">
           <h2><span>アンケート</span></h2>
         </div>
-        <form action="" name="survey">
+        <form method="post" action="https://script.google.com/macros/s/AKfycbwWqdSFTZS3GuU9lerHKfMXTVzUACIoie2gieWjP9n6AcvyA9b-0R6mc3_YMiPQsnNjKw/exec" name="survey">
           <div class="wrapper">
             <div class="survey_name survey_box">
               <div class="survey_label">Q.あなたの名前は？</div>
