ヘッダーとフッターを実装

--- a/toppage.html
+++ b/toppage.html
@@ -16,8 +16,17 @@
 </head>
 
 <body>
-  <header>
-    <img src="/img/logo.svg">
+    <header>
+        <section class="head">
+            <img src="img/posse.png" class="logo">
+            <button>
+                <nuv>
+                    <a href="/status.html" class="status">
+                        <p>status</p>
+                    </a>
+                </nuv>
+            </button>
+        </section>
     </header>
     <main>
 
@@ -96,6 +105,9 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p class="copyright">&copy;Dairoku・D・Kousaku</p>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
