ヘッダー追加

--- a/status.html
+++ b/status.html
@@ -11,6 +11,18 @@
 </head>
 
 <body>
+  <header>
+    <section class="head">
+      <img src="img/posse.png" class="logo">
+      <button>
+        <nav>
+          <a href="/status.html" class="status1">
+            <p>status</p>
+          </a>
+        </nav>
+      </button>
+    </section>
+  </header>
   <div class="status">
     <h2 class="status_title">POSSE生のステータス</h2>
     <div class="status_wrapper">
