--- a/toppage.html
+++ b/toppage.html
@@ -20,11 +20,11 @@
         <section class="head">
             <img src="img/posse.png" class="logo">
             <button>
-                <nuv>
+                <nav>
                     <a href="/status.html" class="status">
                         <p>status</p>
                     </a>
-                </nuv>
+                </nav>
             </button>
         </section>
     </header>
