フッター追加

--- a/survey.html
+++ b/survey.html
@@ -14,16 +14,16 @@
 
 <body>
   <header class="header">
-      <section class="head">
-          <img src="img/posse.png" class="logo">
-          <button>
-              <nav>
-                  <a href="/status.html" class="status">
-                      <p>status</p>
-                  </a>
-              </nav>
-          </button>
-      </section>
+    <section class="head">
+      <img src="img/posse.png" class="logo">
+      <button>
+        <nav>
+          <a href="/status.html" class="status">
+            <p>status</p>
+          </a>
+        </nav>
+      </button>
+    </section>
   </header>
   <main class="main">
     <section class="survey_title">
@@ -43,7 +43,9 @@
         <div class="survey_header">
           <h2><span>アンケート</span></h2>
         </div>
-        <form method="post" action="https://script.google.com/macros/s/AKfycbwWqdSFTZS3GuU9lerHKfMXTVzUACIoie2gieWjP9n6AcvyA9b-0R6mc3_YMiPQsnNjKw/exec" name="survey">
+        <form method="post"
+          action="https://script.google.com/macros/s/AKfycbwWqdSFTZS3GuU9lerHKfMXTVzUACIoie2gieWjP9n6AcvyA9b-0R6mc3_YMiPQsnNjKw/exec"
+          name="survey">
           <div class="wrapper">
             <div class="survey_name survey_box">
               <div class="survey_label">Q.あなたの名前は？</div>
@@ -122,7 +124,9 @@
     </div>
 
   </main>
-  <footer class="footer"></footer>
+  <footer>
+    <p class="copyright">&copy;Dairoku・D・Kousaku</p>
+  </footer>
 </body>
 
 </html>
