--- a/status.html
+++ b/status.html
@@ -23,135 +23,141 @@
       </button>
     </section>
   </header>
-  <div class="status">
-    <h2 class="status_title">POSSE生のステータス</h2>
-    <div class="status_wrapper">
+  <main>
+    <div class="status">
+      <h2 class="status_title">POSSE生のステータス</h2>
+      <div class="status_wrapper">
 
-      <div class="status_3_0 grade">
-        <h2>3.0期生</h2>
-        <div class="haruka box">
-          <h3>江口遥</h3>
-          <div class="input_list">
-            <div class="input_container">
-              <input id="harbors" class="radio_button" type="radio" name="radio" />
-              <div class="radio_tile">
-                <div class="icon walk_icon">
+        <div class="status_3_0 grade">
+          <h2>3.0期生</h2>
+          <div class="haruka box">
+            <h3>江口遥</h3>
+            <div class="input_list">
+              <div class="input_container">
+                <input id="harbors" class="radio_button" type="radio" name="radio" />
+                <div class="radio_tile">
+                  <div class="icon walk_icon">
+                  </div>
+                  <label for="harbors" class="radio_tile_label">HarborS</label>
                 </div>
-                <label for="harbors" class="radio_tile_label">HarborS</label>
+              </div>
+              <div class="input_container">
+                <input id="freemoku" class="radio_button" type="radio" name="radio" />
+                <div class="radio_tile">
+                  <div class="icon walk_icon">
+                  </div>
+                  <label for="freemoku" class="radio_tile_label">ふりもく</label>
+                </div>
+              </div>
+              <div class="input_container">
+                <input id="offline" class="radio_button" type="radio" name="radio" />
+                <div class="radio_tile">
+                  <div class="icon walk_icon">
+                  </div>
+                  <label for="offline" class="radio_tile_label">オフライン</label>
+                </div>
               </div>
             </div>
-            <div class="input_container">
-              <input id="freemoku" class="radio_button" type="radio" name="radio" />
-              <div class="radio_tile">
-                <div class="icon walk_icon">
+          </div>
+          <div class="sakino box">
+            <h3>三木咲乃</h3>
+            <div class="input_list">
+              <div class="input_container">
+                <input id="harbors1" class="radio_button" type="radio" name="radio" />
+                <div class="radio_tile">
+                  <div class="icon walk_icon">
+                  </div>
+                  <label for="harbors1" class="radio_tile_label">HarborS</label>
                 </div>
-                <label for="freemoku" class="radio_tile_label">ふりもく</label>
               </div>
-            </div>
-            <div class="input_container">
-              <input id="offline" class="radio_button" type="radio" name="radio" />
-              <div class="radio_tile">
-                <div class="icon walk_icon">
+              <div class="input_container">
+                <input id="freemoku1" class="radio_button" type="radio" name="radio" />
+                <div class="radio_tile">
+                  <div class="icon walk_icon">
+                  </div>
+                  <label for="freemoku1" class="radio_tile_label">ふりもく</label>
                 </div>
-                <label for="offline" class="radio_tile_label">オフライン</label>
+              </div>
+              <div class="input_container">
+                <input id="offline1" class="radio_button" type="radio" name="radio" />
+                <div class="radio_tile">
+                  <div class="icon walk_icon">
+                  </div>
+                  <label for="offline1" class="radio_tile_label">オフライン</label>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="sakino box">
-          <h3>三木咲乃</h3>
-          <div class="input_list">
-            <div class="input_container">
-              <input id="harbors1" class="radio_button" type="radio" name="radio" />
-              <div class="radio_tile">
-                <div class="icon walk_icon">
-                </div>
-                <label for="harbors1" class="radio_tile_label">HarborS</label>
-              </div>
-            </div>
-            <div class="input_container">
-              <input id="freemoku1" class="radio_button" type="radio" name="radio" />
-              <div class="radio_tile">
-                <div class="icon walk_icon">
-                </div>
-                <label for="freemoku1" class="radio_tile_label">ふりもく</label>
-              </div>
-            </div>
-            <div class="input_container">
-              <input id="offline1" class="radio_button" type="radio" name="radio" />
-              <div class="radio_tile">
-                <div class="icon walk_icon">
-                </div>
-                <label for="offline1" class="radio_tile_label">オフライン</label>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
 
-      <div class="status_3_5 grade">
-        <h2>3.5期生</h2>
-        <div class="hinata box">
-          <h3>工藤日向</h3>
-          <div class="input_list">
-            <div class="input_container">
-              <input id="harbors2" class="radio_button" type="radio" name="radio" />
-              <div class="radio_tile">
-                <div class="icon walk_icon">
+        <div class="status_3_5 grade">
+          <h2>3.5期生</h2>
+          <div class="hinata box">
+            <h3>工藤日向</h3>
+            <div class="input_list">
+              <div class="input_container">
+                <input id="harbors2" class="radio_button" type="radio" name="radio" />
+                <div class="radio_tile">
+                  <div class="icon walk_icon">
+                  </div>
+                  <label for="harbors2" class="radio_tile_label">HarborS</label>
                 </div>
-                <label for="harbors2" class="radio_tile_label">HarborS</label>
               </div>
-            </div>
-            <div class="input_container">
-              <input id="freemoku2" class="radio_button" type="radio" name="radio" />
-              <div class="radio_tile">
-                <div class="icon walk_icon">
+              <div class="input_container">
+                <input id="freemoku2" class="radio_button" type="radio" name="radio" />
+                <div class="radio_tile">
+                  <div class="icon walk_icon">
+                  </div>
+                  <label for="freemoku2" class="radio_tile_label">ふりもく</label>
                 </div>
-                <label for="freemoku2" class="radio_tile_label">ふりもく</label>
               </div>
-            </div>
-            <div class="input_container">
-              <input id="offline2" class="radio_button" type="radio" name="radio" />
-              <div class="radio_tile">
-                <div class="icon walk_icon">
+              <div class="input_container">
+                <input id="offline2" class="radio_button" type="radio" name="radio" />
+                <div class="radio_tile">
+                  <div class="icon walk_icon">
+                  </div>
+                  <label for="offline2" class="radio_tile_label">オフライン</label>
                 </div>
-                <label for="offline2" class="radio_tile_label">オフライン</label>
               </div>
             </div>
           </div>
-        </div>
-        <div class="tatsu box">
-          <h3>本松達裕</h3>
-          <div class="input_list">
-            <div class="input_container">
-              <input id="harbors3" class="radio_button" type="radio" name="radio" />
-              <div class="radio_tile">
-                <div class="icon walk_icon">
+          <div class="tatsu box">
+            <h3>本松達裕</h3>
+            <div class="input_list">
+              <div class="input_container">
+                <input id="harbors3" class="radio_button" type="radio" name="radio" />
+                <div class="radio_tile">
+                  <div class="icon walk_icon">
+                  </div>
+                  <label for="harbors3" class="radio_tile_label">HarborS</label>
                 </div>
-                <label for="harbors3" class="radio_tile_label">HarborS</label>
               </div>
-            </div>
-            <div class="input_container">
-              <input id="freemoku3" class="radio_button" type="radio" name="radio" />
-              <div class="radio_tile">
-                <div class="icon walk_icon">
+              <div class="input_container">
+                <input id="freemoku3" class="radio_button" type="radio" name="radio" />
+                <div class="radio_tile">
+                  <div class="icon walk_icon">
+                  </div>
+                  <label for="freemoku3" class="radio_tile_label">ふりもく</label>
                 </div>
-                <label for="freemoku3" class="radio_tile_label">ふりもく</label>
               </div>
-            </div>
-            <div class="input_container">
-              <input id="offline3" class="radio_button" type="radio" name="radio" />
-              <div class="radio_tile">
-                <div class="icon walk_icon">
+              <div class="input_container">
+                <input id="offline3" class="radio_button" type="radio" name="radio" />
+                <div class="radio_tile">
+                  <div class="icon walk_icon">
+                  </div>
+                  <label for="offline3" class="radio_tile_label">オフライン</label>
                 </div>
-                <label for="offline3" class="radio_tile_label">オフライン</label>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </main>
+  <footer>
+    <p class="copyright">&copy;Dairoku・D・Kousaku</p>
+  </footer>
+
 </body>
 
 </html>
