--- a/toppage.html
+++ b/toppage.html
@@ -16,10 +16,19 @@
 </head>
 
 <body>
-  <header>
-    <img src="/img/logo.svg">
+    <header>
+        <section class="head">
+            <img src="img/posse.png" class="logo">
+            <button>
+                <nuv>
+                    <a href="/status.html" class="status">
+                        <p>status</p>
+                    </a>
+                </nuv>
+            </button>
+        </section>
     </header>
-    <main>
+<main>
 
         <section class="links">
             <div class="bottons">
