cssの色など変更

--- a/survey.html
+++ b/survey.html
@@ -38,7 +38,9 @@
     <section class="survey_title">
       <div class="survey_title_container">
         <div class="survey_title_wrapper">
-          <div class="survey_title_icon"></div>
+          <div class="survey_title_icon">
+            <img src="./img/survey.png" alt="" class="survey_icon">
+          </div>
           <div class="survey_title_content">
             <p class="survey_title_content_title">診断とは・・・？</p>
             <p class="survey_title_content_content">質問の答えに沿って最適なPOSSE部活をお勧めします！<br>早速診断してみましょう！</p>
