--- a/survey.html
+++ b/survey.html
@@ -87,8 +87,8 @@
               <div class="survey_label">Q.あなたの生活スタイルは？</div>
               <div class="survey_item">
                 <label for="timing">A.</label>
-                <input type="radio" name="timing" id="" value="朝">朝型
-                <input type="radio" name="timing" id="" value="夜">夜型
+                <input type="radio" name="timing" id="" value="朝型">朝型
+                <input type="radio" name="timing" id="" value="夜型">夜型
               </div>
             </div>
             <div class="survey_personality survey_box">
@@ -104,12 +104,12 @@
               <div class="survey_item">
                 <label for="sports">A.</label>
                 <ul class="ks-cboxtags">
-                  <li><input type="checkbox" id="baseball" value="野球"><label for="baseball">野球</label></li>
-                  <li><input type="checkbox" id="soccer" value="サッカー"><label for="soccer">サッカー</label></li>
-                  <li><input type="checkbox" id="tennis" value="テニス"><label for="tennis">テニス</label></li>
+                  <li><input type="checkbox" id="baseball" value="野球" name="chk2"><label for="baseball">野球</label></li>
+                  <li><input type="checkbox" id="soccer" value="サッカー" name="chk2"><label for="soccer">サッカー</label></li>
+                  <li><input type="checkbox" id="tennis" value="テニス" name="chk2"><label for="tennis">テニス</label></li>
 
-                  <li><input type="checkbox" id="snowboard" value="スノボ"><label for="snowboard">スノボ</label></li>
-                  <li><input type="checkbox" id="basketball" value="バスケ"><label for="basketball">バスケ</label></li>
+                  <li><input type="checkbox" id="snowboard" value="スノボ" name="chk2"><label for="snowboard">スノボ</label></li>
+                  <li><input type="checkbox" id="basketball" value="バスケ" name="chk2"><label for="basketball">バスケ</label></li>
                 </ul>
               </div>
             </div>
