made into a responsive design

--- a/club.html
+++ b/club.html
@@ -10,11 +10,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Poppins:wght@300;400;500;700;800&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=M+PLUS+Rounded+1c:wght@300;400;500;700;800&family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Poppins:wght@300;400;500;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Poppins:wght@300;400;500;700;800&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=M+PLUS+Rounded+1c:wght@300;400;500;700;800&family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Poppins:wght@300;400;500;700;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/club.css">
 </head>
@@ -29,32 +33,50 @@
     <main class="main">
 
         <!--部活一覧-->
-        <div class="club_itiran">
-            <p class="itiran">部活一覧</p>
+        <div class="club_title_container">
+            <div class="club_itiran">
+                <p class="itiran">部活一覧</p>
+            </div>
         </div>
+
         <!--部活一覧終わり-->
 
 
         <!--バスケ-->
         <section>
             <div class="club_basket">
-                <div class="club_img">
-                    <img src="" alt="画像">
+                <div class="club_img_container">
+                    <div class="club_img">
+
+                        <img src="./img/basket.jpg" alt="画像">
+                    </div>
                 </div>
+
+
                 <div class="pro">
-                    <div class="club_1">
-                        <div class="name">
-                            <p>バスケ部</p>
+                    <div class="pro_container">
+                        <div class="club_1">
+                            <div class="name">
+                                <p>バスケ部</p>
+                            </div>
+                            <div class="de">
+                                <p>活動：週一回 <br>代表：本松達祐</p>
+                            </div>
                         </div>
-                        <div class="de">
-                            <p>活動：週一回 <br>代表：本松達祐</p>
+                        <div class="club_2">
+                            <p>経験者初心者問わず誰でも歓迎！</p>
                         </div>
-                    </div>
-                    <div class="club_2">
-                        <p>経験者初心者問わず誰でも歓迎！</p>
-                    </div>
-                    <div class="club_button">
-                        <p>体験入部してみる！</p>
+                        <div class="club_member">
+                            <img src="./img/tatsu.jpg">
+                            <img src="./img/sakino.jpg">
+                            <img src="./img/haruka.jpg">
+                            <img src="./img/hinata.jpg">
+                        </div>
+                        <a href=""class="club_button_container">
+                            <div class="club_button">
+                                <p>体験入部してみる！</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -64,10 +86,14 @@
         <!--自炊-->
         <section>
             <div class="club_basket">
-                <div class="club_img">
-                    <img src="" alt="画像">
+                <div class="club_img_container">
+                    <div class="club_img">
+
+                        <img src="./img/cooking.jpg" alt="画像">
+                    </div>
                 </div>
                 <div class="pro">
+                    <div class="pro_container">
                     <div class="club_1">
                         <div class="name">
                             <p>自炊部</p>
@@ -79,9 +105,18 @@
                     <div class="club_2">
                         <p>普段外食ばかりの人いませんか？ぜひ参加してね</p>
                     </div>
-                    <div class="club_button">
-                        <p>体験入部してみる！</p>
+                    <div class="club_member">
+
+                        <img src="./img/sakino.jpg">
+                        <img src="./img/haruka.jpg">
+                        <img src="./img/hinata.jpg">
                     </div>
+                    <a href="" class="club_button_container">
+                        <div class="club_button">
+                            <p>体験入部してみる！</p>
+                        </div>
+                    </a>
+                </div>
                 </div>
             </div>
         </section>
@@ -90,10 +125,13 @@
         <!--朝活-->
         <section>
             <div class="club_basket">
-                <div class="club_img">
-                    <img src="" alt="画像">
+                <div class="club_img_container">
+                    <div class="club_img">
+                        <img src="./img/morning.png" alt="画像">
+                    </div>
                 </div>
                 <div class="pro">
+                    <div class="pro_container">
                     <div class="club_1">
                         <div class="name">
                             <p>朝活部</p>
@@ -105,10 +143,17 @@
                     <div class="club_2">
                         <p>生活習慣乱れている人集え！</p>
                     </div>
-                    <div class="club_button">
-                        <p>体験入部してみる！</p>
+                    <div class="club_member">
+                        <img src="./img/tatsu.jpg">
+                        <img src="./img/sakino.jpg">
                     </div>
+                    <a href="" class="club_button_container">
+                        <div class="club_button">
+                            <p>体験入部してみる！</p>
+                        </div>
+                    </a>
                 </div>
+            </div>
             </div>
         </section>
         <!--朝活終わり-->
@@ -116,10 +161,13 @@
         <!--映画-->
         <section>
             <div class="club_basket">
-                <div class="club_img">
-                    <img src="" alt="画像">
+                <div class="club_img_container"><div class="club_img">
+                    <img src="./img/movie.jpg" alt="画像">
                 </div>
+            </div>
+
                 <div class="pro">
+                    <div class="pro_container">
                     <div class="club_1">
                         <div class="name">
                             <p>映画部</p>
@@ -131,10 +179,16 @@
                     <div class="club_2">
                         <p>映画観賞会します！</p>
                     </div>
-                    <div class="club_button">
-                        <p>体験入部してみる！</p>
+                    <div class="club_member">
+                        <img src="./img/sakino.jpg"> <img src="./img/tatsu.jpg"> <img src="./img/hinata.jpg">
                     </div>
+                    <a href="" class="club_button_container">
+                        <div class="club_button">
+                            <p>体験入部してみる！</p>
+                        </div>
+                    </a>
                 </div>
+            </div>
             </div>
         </section>
         <!--映画終わり-->
