--- a/club.html
+++ b/club.html
@@ -25,9 +25,18 @@
 
 <body>
     <!--ヘッダ-->
-    <!-- <header class="p-header">
-
-</header> -->
+    <header>
+        <section class="head">
+            <img src="img/posse.png" class="logo">
+            <button>
+                <nav>
+                    <a href="/status.html" class="status1">
+                        <p>status</p>
+                    </a>
+                </nav>
+            </button>
+        </section>
+    </header>
     <!--ヘッダーここまで-->
 
     <main class="main">
@@ -72,7 +81,7 @@
                             <img src="./img/haruka.jpg">
                             <img src="./img/hinata.jpg">
                         </div>
-                        <a href=""class="club_button_container">
+                        <a href="" class="club_button_container">
                             <div class="club_button">
                                 <p>体験入部してみる！</p>
                             </div>
@@ -94,29 +103,29 @@
                 </div>
                 <div class="pro">
                     <div class="pro_container">
-                    <div class="club_1">
-                        <div class="name">
-                            <p>自炊部</p>
+                        <div class="club_1">
+                            <div class="name">
+                                <p>自炊部</p>
+                            </div>
+                            <div class="de">
+                                <p>活動：週二回 <br>代表：江口遥</p>
+                            </div>
                         </div>
-                        <div class="de">
-                            <p>活動：週二回 <br>代表：江口遥</p>
+                        <div class="club_2">
+                            <p>普段外食ばかりの人いませんか？ぜひ参加してね</p>
                         </div>
-                    </div>
-                    <div class="club_2">
-                        <p>普段外食ばかりの人いませんか？ぜひ参加してね</p>
-                    </div>
-                    <div class="club_member">
+                        <div class="club_member">
 
-                        <img src="./img/sakino.jpg">
-                        <img src="./img/haruka.jpg">
-                        <img src="./img/hinata.jpg">
-                    </div>
-                    <a href="" class="club_button_container">
-                        <div class="club_button">
-                            <p>体験入部してみる！</p>
+                            <img src="./img/sakino.jpg">
+                            <img src="./img/haruka.jpg">
+                            <img src="./img/hinata.jpg">
                         </div>
-                    </a>
-                </div>
+                        <a href="" class="club_button_container">
+                            <div class="club_button">
+                                <p>体験入部してみる！</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -132,28 +141,28 @@
                 </div>
                 <div class="pro">
                     <div class="pro_container">
-                    <div class="club_1">
-                        <div class="name">
-                            <p>朝活部</p>
+                        <div class="club_1">
+                            <div class="name">
+                                <p>朝活部</p>
+                            </div>
+                            <div class="de">
+                                <p>活動：週三回 <br>代表：工藤日向</p>
+                            </div>
                         </div>
-                        <div class="de">
-                            <p>活動：週三回 <br>代表：工藤日向</p>
+                        <div class="club_2">
+                            <p>生活習慣乱れている人集え！</p>
                         </div>
-                    </div>
-                    <div class="club_2">
-                        <p>生活習慣乱れている人集え！</p>
-                    </div>
-                    <div class="club_member">
-                        <img src="./img/tatsu.jpg">
-                        <img src="./img/sakino.jpg">
-                    </div>
-                    <a href="" class="club_button_container">
-                        <div class="club_button">
-                            <p>体験入部してみる！</p>
+                        <div class="club_member">
+                            <img src="./img/tatsu.jpg">
+                            <img src="./img/sakino.jpg">
                         </div>
-                    </a>
+                        <a href="" class="club_button_container">
+                            <div class="club_button">
+                                <p>体験入部してみる！</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
-            </div>
             </div>
         </section>
         <!--朝活終わり-->
@@ -161,41 +170,44 @@
         <!--映画-->
         <section>
             <div class="club_basket">
-                <div class="club_img_container"><div class="club_img">
-                    <img src="./img/movie.jpg" alt="画像">
+                <div class="club_img_container">
+                    <div class="club_img">
+                        <img src="./img/movie.jpg" alt="画像">
+                    </div>
                 </div>
-            </div>
 
                 <div class="pro">
                     <div class="pro_container">
-                    <div class="club_1">
-                        <div class="name">
-                            <p>映画部</p>
+                        <div class="club_1">
+                            <div class="name">
+                                <p>映画部</p>
+                            </div>
+                            <div class="de">
+                                <p>活動：不定期 <br>代表：三木咲乃</p>
+                            </div>
                         </div>
-                        <div class="de">
-                            <p>活動：不定期 <br>代表：三木咲乃</p>
+                        <div class="club_2">
+                            <p>映画観賞会します！</p>
                         </div>
-                    </div>
-                    <div class="club_2">
-                        <p>映画観賞会します！</p>
-                    </div>
-                    <div class="club_member">
-                        <img src="./img/sakino.jpg"> <img src="./img/tatsu.jpg"> <img src="./img/hinata.jpg">
-                    </div>
-                    <a href="" class="club_button_container">
-                        <div class="club_button">
-                            <p>体験入部してみる！</p>
+                        <div class="club_member">
+                            <img src="./img/sakino.jpg"> <img src="./img/tatsu.jpg"> <img src="./img/hinata.jpg">
                         </div>
-                    </a>
+                        <a href="" class="club_button_container">
+                            <div class="club_button">
+                                <p>体験入部してみる！</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
-            </div>
             </div>
         </section>
         <!--映画終わり-->
     </main>
 
     <!--フッター-->
-
+    <footer>
+        <p class="copyright">&copy;Dairoku・D・Kousaku</p>
+    </footer>
     <!--フッター終わり-->
 
 </body>
