--- a/club.html
+++ b/club.html
@@ -30,7 +30,7 @@
             <img src="img/posse.png" class="logo">
             <button>
                 <nav>
-                    <a href="/status.html" class="status1">
+                    <a href="/status.html" class="status">
                         <p>status</p>
                     </a>
                 </nav>
