statusページデザインok

--- a/status.html
+++ b/status.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>POSSE生ステータス</title>
+  <title>みんなのステータス</title>
   <link
     href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Poppins:wght@300;400;500;700;800&display=swap"
     rel="stylesheet">
@@ -34,7 +34,7 @@
   </header>
   <main>
     <div class="status">
-      <h2 class="status_title">POSSE生のステータス</h2>
+      <h2 class="status_title">みんなのステータス</h2>
       <div class="status_wrapper">
 
         <div class="status_3_0 grade">
