--- a/survey.html
+++ b/survey.html
@@ -55,7 +55,7 @@
           <h2><span>アンケート</span></h2>
         </div>
         <form method="post"
-          action="https://script.google.com/macros/s/AKfycbwWqdSFTZS3GuU9lerHKfMXTVzUACIoie2gieWjP9n6AcvyA9b-0R6mc3_YMiPQsnNjKw/exec"
+          action=""
           name="survey">
           <div class="wrapper">
             <div class="survey_name survey_box">
