--- a/club.html
+++ b/club.html
@@ -203,7 +203,7 @@
         </section>
         <!--映画終わり-->
     </main>
-
+    <button class="go-top"><a href="/toppage.html">トップページに戻る</a></button>
     <!--フッター-->
     <footer>
         <p class="copyright">&copy;Dairoku・D・Kousaku</p>
