--- a/status.html
+++ b/status.html
@@ -163,6 +163,7 @@
       </div>
     </div>
   </main>
+  <button class="go-top"><a href="/toppage.html">トップページに戻る</a></button>
   <footer>
     <p class="copyright">&copy;Dairoku・D・Kousaku</p>
   </footer>
