--- a/survey.html
+++ b/survey.html
@@ -135,6 +135,8 @@
     </div>
 
   </main>
+  <!--実質フッターcss-->
+  <button class="go-top"><a href="/toppage.html">トップページに戻る</a></button>
   <footer>
     <p class="copyright">&copy;Dairoku・D・Kousaku</p>
   </footer>
