中途半端のGAS導入

--- a/survey.html
+++ b/survey.html
@@ -55,7 +55,7 @@
           <h2><span>アンケート</span></h2>
         </div>
         <form method="post"
-          action=""
+          action="https://script.google.com/macros/s/AKfycbzWg3AjRfZj0Jy6X3oiFRc23eBiBcfIhnycwxpifq7x_N5xo5Yt63GDlSK9z6jjZxTxFw/exec"
           name="survey">
           <div class="wrapper">
             <div class="survey_name survey_box">
