エラーを修正

--- a/status.html
+++ b/status.html
@@ -72,7 +72,7 @@
             <h3>三木咲乃</h3>
             <div class="input_list">
               <div class="input_container">
-                <input id="harbors1" class="radio_button" type="radio" name="radio" />
+                <input id="harbors1" class="radio_button" type="radio" name="radio1" />
                 <div class="radio_tile">
                   <div class="icon walk_icon">
                   </div>
@@ -80,7 +80,7 @@
                 </div>
               </div>
               <div class="input_container">
-                <input id="freemoku1" class="radio_button" type="radio" name="radio" />
+                <input id="freemoku1" class="radio_button" type="radio" name="radio1" />
                 <div class="radio_tile">
                   <div class="icon walk_icon">
                   </div>
@@ -88,7 +88,7 @@
                 </div>
               </div>
               <div class="input_container">
-                <input id="offline1" class="radio_button" type="radio" name="radio" />
+                <input id="offline1" class="radio_button" type="radio" name="radio1" />
                 <div class="radio_tile">
                   <div class="icon walk_icon">
                   </div>
@@ -105,7 +105,7 @@
             <h3>工藤日向</h3>
             <div class="input_list">
               <div class="input_container">
-                <input id="harbors2" class="radio_button" type="radio" name="radio" />
+                <input id="harbors2" class="radio_button" type="radio" name="radio2" />
                 <div class="radio_tile">
                   <div class="icon walk_icon">
                   </div>
@@ -113,7 +113,7 @@
                 </div>
               </div>
               <div class="input_container">
-                <input id="freemoku2" class="radio_button" type="radio" name="radio" />
+                <input id="freemoku2" class="radio_button" type="radio" name="radio2" />
                 <div class="radio_tile">
                   <div class="icon walk_icon">
                   </div>
@@ -121,7 +121,7 @@
                 </div>
               </div>
               <div class="input_container">
-                <input id="offline2" class="radio_button" type="radio" name="radio" />
+                <input id="offline2" class="radio_button" type="radio" name="radio2" />
                 <div class="radio_tile">
                   <div class="icon walk_icon">
                   </div>
@@ -134,7 +134,7 @@
             <h3>本松達裕</h3>
             <div class="input_list">
               <div class="input_container">
-                <input id="harbors3" class="radio_button" type="radio" name="radio" />
+                <input id="harbors3" class="radio_button" type="radio" name="radio3" />
                 <div class="radio_tile">
                   <div class="icon walk_icon">
                   </div>
@@ -142,7 +142,7 @@
                 </div>
               </div>
               <div class="input_container">
-                <input id="freemoku3" class="radio_button" type="radio" name="radio" />
+                <input id="freemoku3" class="radio_button" type="radio" name="radio3" />
                 <div class="radio_tile">
                   <div class="icon walk_icon">
                   </div>
@@ -150,7 +150,7 @@
                 </div>
               </div>
               <div class="input_container">
-                <input id="offline3" class="radio_button" type="radio" name="radio" />
+                <input id="offline3" class="radio_button" type="radio" name="radio3" />
                 <div class="radio_tile">
                   <div class="icon walk_icon">
                   </div>
