--- a/status.html
+++ b/status.html
@@ -163,7 +163,9 @@
       </div>
     </div>
   </main>
+  <div class="top">
   <button class="go-top"><a href="/toppage.html">トップページに戻る</a></button>
+</div>
   <footer>
     <p class="copyright">&copy;Dairoku・D・Kousaku</p>
   </footer>
