--- a/survey.html
+++ b/survey.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>アンケート</title>
+  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/survey.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Poppins:wght@300;400;500;700;800&display=swap"
     rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=M+PLUS+Rounded+1c:wght@300;400;500;700;800&family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Poppins:wght@300;400;500;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/survey.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   
@@ -135,11 +135,16 @@
     </div>
 
   </main>
-  <!--実質フッターcss-->
-  <button class="go-top"><a href="/toppage.html">トップページに戻る</a></button>
   <footer>
-    <p class="copyright">&copy;Dairoku・D・Kousaku</p>
-  </footer>
+    <div class="footer">
+        <div class="button_top">
+            <button class="go-top"><a href="/toppage.html">トップページに戻る</a>
+        </div>
+        </button>
+        <p class="copyright">&copy;Dairoku・D・Kousaku</p>
+    </div>
+
+</footer>
 </body>
 
 </html>
